--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Projet Communs</title>
-  </head>
-  <body>
-    <div class="">
+<head>
+  <meta charset="utf-8" />
+  <title>Projet Communs</title>
+  <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
 
-    </div>
-  </body>
+  <script type="assets/js/script-3.3.1.js"></script>
+  <script type="assets/js/script.js"></script>
+</body>
 </html>
