ajout des cards

--- a/index.html
+++ b/index.html
@@ -7,7 +7,210 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-
+  <div class="container">
+    <div class="card-deck">
+      <div class="card" id="vt1">
+        <img class="card-img-top" src="assets/img/ventour1.jpg" alt="ventilateur tour">
+        <div class="card-body">
+          <h5 class="card-title">Ventilateur tour</h5>
+          <p class="card-text">catégorie :ventilateur tour</p>
+        </div>
+      </div>
+      <div class="card" id="vt2">
+        <img class="card-img-top" src="assets/img/ventour2.jpg" alt="ventilateur tour">
+        <div class="card-body">
+          <h5 class="card-title">Ventilateur</h5>
+          <p class="card-text">catégorie :ventilateur tour</p>
+        </div>
+      </div>
+      <div class="card" id="vt3">
+        <img class="card-img-top" src="assets/img/ventour3.jpg" alt="ventilateur tour">
+        <div class="card-body">
+          <h5 class="card-title">Ventilateur</h5>
+          <p class="card-text">catégorie :ventilateur tour</p>
+        </div>
+      </div>
+      <div class="card-deck">
+        <div class="card" id="vt4">
+          <img class="card-img-top" src="assets/img/ventour4.jpg" alt="ventilateur tour">
+          <div class="card-body">
+            <h5 class="card-title">Ventilateur tour</h5>
+            <p class="card-text">catégorie :ventilateur tour</p>
+          </div>
+        </div>
+        <div class="card" id="vt5">
+          <img class="card-img-top" src="assets/img/ventour5.jpeg" alt="ventilateur tour">
+          <div class="card-body">
+            <h5 class="card-title">Ventilateur</h5>
+            <p class="card-text">catégorie :ventilateur tour</p>
+          </div>
+        </div>
+        <div class="card" id="vt6">
+          <img class="card-img-top" src="assets/img/ventour6.jpg" alt="ventilateur tour">
+          <div class="card-body">
+            <h5 class="card-title">Ventilateur</h5>
+            <p class="card-text">catégorie :ventilateur tour</p>
+          </div>
+        </div>
+        <div class="card-deck">
+          <div class="card" id="vt7">
+            <img class="card-img-top" src="assets/img/ventour7.jpeg" alt="ventilateur tour">
+            <div class="card-body">
+              <h5 class="card-title">Ventilateur tour</h5>
+              <p class="card-text">catégorie :ventilateur tour</p>
+            </div>
+          </div>
+          <div class="card" id="vt8">
+            <img class="card-img-top" src="assets/img/ventour8.jpg" alt="ventilateur tour">
+            <div class="card-body">
+              <h5 class="card-title">Ventilateur</h5>
+              <p class="card-text">catégorie :ventilateur tour</p>
+            </div>
+          </div>
+          <div class="card" id="vt9">
+            <img class="card-img-top" src="assets/img/ventour9.jpg" alt="ventilateur tour">
+            <div class="card-body">
+              <h5 class="card-title">Ventilateur</h5>
+              <p class="card-text">catégorie :ventilateur tour</p>
+            </div>
+          </div>
+    </div>
+    <div class="container">
+      <div class="card-deck">
+        <div class="card" id="vsp1">
+          <img class="card-img-top" src="assets/img/vent-sans-pales1.jpeg" alt="ventilateur sans pales">
+          <div class="card-body">
+            <h5 class="card-title">Ventilateur</h5>
+            <p class="card-text">catégorie :ventilateur tour</p>
+          </div>
+        </div>
+        <div class="card" id="vsp2">
+          <img class="card-img-top" src="assets/img/vent-sans-pales2.jpg" alt="ventilateur sans pales">
+          <div class="card-body">
+            <h5 class="card-title">Ventilateur</h5>
+            <p class="card-text">catégorie :ventilateur tour</p>
+          </div>
+        </div>
+        <div class="card" id="vsp3">
+          <img class="card-img-top" src="assets/img/vent-sans-pales3.jpg" alt="ventilateur sans pales">
+          <div class="card-body">
+            <h5 class="card-title">Ventilateur</h5>
+            <p class="card-text">catégorie :ventilateur tour</p>
+          </div>
+        </div>
+        <div class="card-deck">
+          <div class="card" id="vsp4">
+            <img class="card-img-top" src="assets/img/vent-sans-pales4.jpg" alt="ventilateur sans pales">
+            <div class="card-body">
+              <h5 class="card-title">Ventilateur tour</h5>
+              <p class="card-text">catégorie :ventilateur tour</p>
+            </div>
+          </div>
+          <div class="card" id="vsp5">
+            <img class="card-img-top" src="assets/img/vent-sans-pales5.jpg" alt="ventilateur sans pales">
+            <div class="card-body">
+              <h5 class="card-title">Ventilateur</h5>
+              <p class="card-text">catégorie :ventilateur tour</p>
+            </div>
+          </div>
+          <div class="card" id="vsp6">
+            <img class="card-img-top" src="assets/img/vent-sans-pales6.jpg" alt="ventilateur sans pales">
+            <div class="card-body">
+              <h5 class="card-title">Ventilateur</h5>
+              <p class="card-text">catégorie :ventilateur tour</p>
+            </div>
+          </div>
+          <div class="card-deck">
+            <div class="card" id="vsp7">
+              <img class="card-img-top" src="assets/img/vent-sans-pales7.jpg" alt="ventilateur sans pales">
+              <div class="card-body">
+                <h5 class="card-title">Ventilateur tour</h5>
+                <p class="card-text">catégorie :ventilateur tour</p>
+              </div>
+            </div>
+            <div class="card" id="vsp8">
+              <img class="card-img-top" src="assets/img/vent-sans-pales8.jpeg" alt="ventilateur sans pales">
+              <div class="card-body">
+                <h5 class="card-title">Ventilateur</h5>
+                <p class="card-text">catégorie :ventilateur tour</p>
+              </div>
+            </div>
+            <div class="card" id="vsp9">
+              <img class="card-img-top" src="assets/img/vent-sans-pales9.jpg" alt="ventilateur sans pales">
+              <div class="card-body">
+                <h5 class="card-title">Ventilateur</h5>
+                <p class="card-text">catégorie :ventilateur tour</p>
+              </div>
+            </div>
+      </div>
+      <div class="container">
+        <div class="card-deck">
+          <div class="card" id="vp1">
+            <img class="card-img-top" src="assets/img/ventilo-pied1.jpg" alt="ventilateur pied">
+            <div class="card-body">
+              <h5 class="card-title">Ventilateur tour</h5>
+              <p class="card-text">catégorie :ventilateur tour</p>
+            </div>
+          </div>
+          <div class="card" id="vp2">
+            <img class="card-img-top" src="assets/img/ventilo-pied2.jpg" alt="ventilateur pied">
+            <div class="card-body">
+              <h5 class="card-title">Ventilateur</h5>
+              <p class="card-text">catégorie :ventilateur tour</p>
+            </div>
+          </div>
+          <div class="card" id="vp3">
+            <img class="card-img-top" src="assets/img/ventilo-pied3.jpg" alt="ventilateur pieds">
+            <div class="card-body">
+              <h5 class="card-title">Ventilateur</h5>
+              <p class="card-text">catégorie :ventilateur tour</p>
+            </div>
+          </div>
+          <div class="card-deck">
+            <div class="card" id="vp4">
+              <img class="card-img-top" src="assets/img/ventilo-pied4.jpg" alt="ventilateur pieds">
+              <div class="card-body">
+                <h5 class="card-title">Ventilateur tour</h5>
+                <p class="card-text">catégorie :ventilateur tour</p>
+              </div>
+            </div>
+            <div class="card" id="vp5">
+              <img class="card-img-top" src="assets/img/ventilo-pied5.jpg" alt="ventilateur pieds">
+              <div class="card-body">
+                <h5 class="card-title">Ventilateur</h5>
+                <p class="card-text">catégorie :ventilateur tour</p>
+              </div>
+            </div>
+            <div class="card" id="vp6">
+              <img class="card-img-top" src="assets/img/ventilo-pied6.jpg" alt="ventilateur pied">
+              <div class="card-body">
+                <h5 class="card-title">Ventilateur</h5>
+                <p class="card-text">catégorie :ventilateur tour</p>
+              </div>
+            </div>
+            <div class="card-deck">
+              <div class="card" id="vp7">
+                <img class="card-img-top" src="assets/img/ventilo-pied7.jpg" alt="ventilateur pied">
+                <div class="card-body">
+                  <h5 class="card-title">Ventilateur tour</h5>
+                  <p class="card-text">catégorie :ventilateur tour</p>
+                </div>
+              </div>
+              <div class="card" id="vp8">
+                <img class="card-img-top" src="assets/img/ventilo-pied8.jpg" alt="ventilateur pied">
+                <div class="card-body">
+                  <h5 class="card-title">Ventilateur</h5>
+                  <p class="card-text">catégorie :ventilateur tour</p>
+                </div>
+              </div>
+              <div class="card" id="vp9">
+                <img class="card-img-top" src="assets/img/ventilo-pied9.jpg" alt="ventilateur pied">
+                <div class="card-body">
+                  <h5 class="card-title">Ventilateur</h5>
+                  <p class="card-text">catégorie :ventilateur tour</p>
+                </div>
+              </div>
+        </div>
   <script type="assets/js/script-3.3.1.js"></script>
   <script type="assets/js/script.js"></script>
 </body>
