--- a/index.html
+++ b/index.html
@@ -2,11 +2,29 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <title>Projet Communs</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+  <!--Debut wrapper-all -->
+    <div id="wrapper-all">
+  <!--Debut sidebar-wrappper -->
+  <div id="sidebar-wrapper">
+    <ul class="sidebar-nav">
+      <div id="sidebar-nav-div-title"><li><a class="sidebar-title" href="#">Catégorie</a></li></div>
+      <div id="sidebar-nav-div-input"><li>
+        <input id="sidebar-nav-input" type="text" name="search" value="" />
+        <button id="sidebar-nav-button" type="submit"><i id="icon-search" class="fa fa-search"></i></button>
+      </li></div>
+      <div id="sidebar-nav-div"><li><a class="sidebar-nav-link" href="#">Ventilateur sur pied</a></li></div>
+      <div id="sidebar-nav-div"><li><a class="sidebar-nav-link" href="#">Ventilateur colonne</a></li></div>
+      <div id="sidebar-nav-div"><li><a class="sidebar-nav-link" href="#">Ventilateur sans pales</a></li></div>
+    </ul>
+  </div>
+  <!-- Fin sidebar-wrapper -->
   <div class="container">
     <div class="card-deck">
       <div class="card" id="vt1">
@@ -211,6 +229,8 @@
                 </div>
               </div>
         </div>
+      </div>
+    <!--Fin wrapper-all -->
   <script type="assets/js/script-3.3.1.js"></script>
   <script type="assets/js/script.js"></script>
 </body>
