--- a/index.html
+++ b/index.html
@@ -25,210 +25,240 @@
     </ul>
   </div>
   <!-- Fin sidebar-wrapper -->
+  <!-- 1ère catégorie de ventilateur-->
   <div class="container">
     <div class="card-deck">
       <div class="card" id="vt1">
         <img class="card-img-top" src="assets/img/ventour1.jpg" alt="ventilateur tour">
         <div class="card-body">
-          <h5 class="card-title">Ventilateur tour</h5>
-          <p class="card-text">catégorie :ventilateur tour</p>
+          <h5 class="card-title">Venti-2018</h5>
+          <div hidden id="refNumber1">150.963</div>
+          <p class="card-text" id="priceVt1">49.99€</p>
         </div>
       </div>
       <div class="card" id="vt2">
         <img class="card-img-top" src="assets/img/ventour2.jpg" alt="ventilateur tour">
         <div class="card-body">
-          <h5 class="card-title">Ventilateur</h5>
-          <p class="card-text">catégorie :ventilateur tour</p>
+          <h5 class="card-title">Ventil</h5>
+          <div hidden id="refNumber2">151.963</div>
+          <p class="card-text" id="priceVt2">25.99€</p>
         </div>
       </div>
       <div class="card" id="vt3">
         <img class="card-img-top" src="assets/img/ventour3.jpg" alt="ventilateur tour">
         <div class="card-body">
-          <h5 class="card-title">Ventilateur</h5>
-          <p class="card-text">catégorie :ventilateur tour</p>
+          <h5 class="card-title">Venti-95</h5>
+          <div hidden id="refNumber3">152.963</div>
+          <p class="card-text" id="priceVt3">19.99€</p>
         </div>
       </div>
       <div class="card-deck">
         <div class="card" id="vt4">
           <img class="card-img-top" src="assets/img/ventour4.jpg" alt="ventilateur tour">
           <div class="card-body">
-            <h5 class="card-title">Ventilateur tour</h5>
-            <p class="card-text">catégorie :ventilateur tour</p>
+            <h5 class="card-title">Vent block</h5>
+            <div hidden id="refNumber4">153.963</div>
+            <p class="card-text" id="priceVt4">159.80€</p>
           </div>
         </div>
         <div class="card" id="vt5">
           <img class="card-img-top" src="assets/img/ventour5.jpeg" alt="ventilateur tour">
           <div class="card-body">
-            <h5 class="card-title">Ventilateur</h5>
-            <p class="card-text">catégorie :ventilateur tour</p>
+            <h5 class="card-title">Vent block noir</h5>
+            <div hidden id="refNumber5">155.963</div>
+            <p class="card-text" id="priceVt5">169.80€</p>
           </div>
         </div>
         <div class="card" id="vt6">
           <img class="card-img-top" src="assets/img/ventour6.jpg" alt="ventilateur tour">
           <div class="card-body">
-            <h5 class="card-title">Ventilateur</h5>
-            <p class="card-text">catégorie :ventilateur tour</p>
+            <h5 class="card-title">Ventil1000</h5>
+            <div hidden id="refNumber6">156.963</div>
+            <p class="card-text" id="priceVt6">125.50€</p>
           </div>
         </div>
         <div class="card-deck">
           <div class="card" id="vt7">
             <img class="card-img-top" src="assets/img/ventour7.jpeg" alt="ventilateur tour">
             <div class="card-body">
-              <h5 class="card-title">Ventilateur tour</h5>
-              <p class="card-text">catégorie :ventilateur tour</p>
+              <h5 class="card-title">Venti'tour</h5>
+              <div hidden id="refNumber7">157.963</div>
+              <p class="card-text" id="priceVt7">165€</p>
             </div>
           </div>
           <div class="card" id="vt8">
             <img class="card-img-top" src="assets/img/ventour8.jpg" alt="ventilateur tour">
             <div class="card-body">
               <h5 class="card-title">Ventilateur</h5>
-              <p class="card-text">catégorie :ventilateur tour</p>
+              <div hidden id="refNumber8">158.963</div>
+              <p class="card-text" id="priceVt8">35€</p>
             </div>
           </div>
           <div class="card" id="vt9">
             <img class="card-img-top" src="assets/img/ventour9.jpg" alt="ventilateur tour">
             <div class="card-body">
-              <h5 class="card-title">Ventilateur</h5>
-              <p class="card-text">catégorie :ventilateur tour</p>
+              <h5 class="card-title">Ventil'19</h5>
+              <div hidden id="refNumber9">159.963</div>
+              <p class="card-text" id="priceVt9">26.90€</p>
             </div>
-          </div>
-    </div>
-    <div class="container">
-      <div class="card-deck">
-        <div class="card" id="vsp1">
-          <img class="card-img-top" src="assets/img/vent-sans-pales1.jpeg" alt="ventilateur sans pales">
-          <div class="card-body">
-            <h5 class="card-title">Ventilateur</h5>
-            <p class="card-text">catégorie :ventilateur tour</p>
           </div>
         </div>
-        <div class="card" id="vsp2">
-          <img class="card-img-top" src="assets/img/vent-sans-pales2.jpg" alt="ventilateur sans pales">
-          <div class="card-body">
-            <h5 class="card-title">Ventilateur</h5>
-            <p class="card-text">catégorie :ventilateur tour</p>
-          </div>
-        </div>
-        <div class="card" id="vsp3">
-          <img class="card-img-top" src="assets/img/vent-sans-pales3.jpg" alt="ventilateur sans pales">
-          <div class="card-body">
-            <h5 class="card-title">Ventilateur</h5>
-            <p class="card-text">catégorie :ventilateur tour</p>
-          </div>
-        </div>
-        <div class="card-deck">
-          <div class="card" id="vsp4">
-            <img class="card-img-top" src="assets/img/vent-sans-pales4.jpg" alt="ventilateur sans pales">
-            <div class="card-body">
-              <h5 class="card-title">Ventilateur tour</h5>
-              <p class="card-text">catégorie :ventilateur tour</p>
-            </div>
-          </div>
-          <div class="card" id="vsp5">
-            <img class="card-img-top" src="assets/img/vent-sans-pales5.jpg" alt="ventilateur sans pales">
-            <div class="card-body">
-              <h5 class="card-title">Ventilateur</h5>
-              <p class="card-text">catégorie :ventilateur tour</p>
-            </div>
-          </div>
-          <div class="card" id="vsp6">
-            <img class="card-img-top" src="assets/img/vent-sans-pales6.jpg" alt="ventilateur sans pales">
-            <div class="card-body">
-              <h5 class="card-title">Ventilateur</h5>
-              <p class="card-text">catégorie :ventilateur tour</p>
-            </div>
-          </div>
+        <!-- 2ème catégorie de ventilateur-->
+        <div class="container">
           <div class="card-deck">
-            <div class="card" id="vsp7">
-              <img class="card-img-top" src="assets/img/vent-sans-pales7.jpg" alt="ventilateur sans pales">
+            <div class="card" id="vsp1">
+              <img class="card-img-top" src="assets/img/vent-sans-pales1.jpeg" alt="ventilateur sans pales">
               <div class="card-body">
-                <h5 class="card-title">Ventilateur tour</h5>
-                <p class="card-text">catégorie :ventilateur tour</p>
+                <h5 class="card-title">Ventil'1500</h5>
+                <div hidden id="refNumber10">150.960</div>
+                <p class="card-text" id="priceVsp1">159.90€</p>
               </div>
             </div>
-            <div class="card" id="vsp8">
-              <img class="card-img-top" src="assets/img/vent-sans-pales8.jpeg" alt="ventilateur sans pales">
+            <div class="card" id="vsp2">
+              <img class="card-img-top" src="assets/img/vent-sans-pales2.jpg" alt="ventilateur sans pales">
               <div class="card-body">
-                <h5 class="card-title">Ventilateur</h5>
-                <p class="card-text">catégorie :ventilateur tour</p>
+                <h5 class="card-title">Ventil'grey</h5>
+                <div hidden id="refNumber11">150.961</div>
+                <p class="card-text" id="priceVsp2">35.99€</p>
               </div>
             </div>
-            <div class="card" id="vsp9">
-              <img class="card-img-top" src="assets/img/vent-sans-pales9.jpg" alt="ventilateur sans pales">
+            <div class="card" id="vsp3">
+              <img class="card-img-top" src="assets/img/vent-sans-pales3.jpg" alt="ventilateur sans pales">
               <div class="card-body">
-                <h5 class="card-title">Ventilateur</h5>
-                <p class="card-text">catégorie :ventilateur tour</p>
-              </div>
-            </div>
-      </div>
-      <div class="container">
-        <div class="card-deck">
-          <div class="card" id="vp1">
-            <img class="card-img-top" src="assets/img/ventilo-pied1.jpg" alt="ventilateur pied">
-            <div class="card-body">
-              <h5 class="card-title">Ventilateur tour</h5>
-              <p class="card-text">catégorie :ventilateur tour</p>
-            </div>
-          </div>
-          <div class="card" id="vp2">
-            <img class="card-img-top" src="assets/img/ventilo-pied2.jpg" alt="ventilateur pied">
-            <div class="card-body">
-              <h5 class="card-title">Ventilateur</h5>
-              <p class="card-text">catégorie :ventilateur tour</p>
-            </div>
-          </div>
-          <div class="card" id="vp3">
-            <img class="card-img-top" src="assets/img/ventilo-pied3.jpg" alt="ventilateur pieds">
-            <div class="card-body">
-              <h5 class="card-title">Ventilateur</h5>
-              <p class="card-text">catégorie :ventilateur tour</p>
-            </div>
-          </div>
-          <div class="card-deck">
-            <div class="card" id="vp4">
-              <img class="card-img-top" src="assets/img/ventilo-pied4.jpg" alt="ventilateur pieds">
-              <div class="card-body">
-                <h5 class="card-title">Ventilateur tour</h5>
-                <p class="card-text">catégorie :ventilateur tour</p>
-              </div>
-            </div>
-            <div class="card" id="vp5">
-              <img class="card-img-top" src="assets/img/ventilo-pied5.jpg" alt="ventilateur pieds">
-              <div class="card-body">
-                <h5 class="card-title">Ventilateur</h5>
-                <p class="card-text">catégorie :ventilateur tour</p>
-              </div>
-            </div>
-            <div class="card" id="vp6">
-              <img class="card-img-top" src="assets/img/ventilo-pied6.jpg" alt="ventilateur pied">
-              <div class="card-body">
-                <h5 class="card-title">Ventilateur</h5>
-                <p class="card-text">catégorie :ventilateur tour</p>
+                <h5 class="card-title">Ventil'gold</h5>
+                <div hidden id="refNumber12">150.962</div>
+                <p class="card-text" id="priceVsp3">35.99€</p>
               </div>
             </div>
             <div class="card-deck">
-              <div class="card" id="vp7">
-                <img class="card-img-top" src="assets/img/ventilo-pied7.jpg" alt="ventilateur pied">
+              <div class="card" id="vsp4">
+                <img class="card-img-top" src="assets/img/vent-sans-pales4.jpg" alt="ventilateur sans pales">
                 <div class="card-body">
-                  <h5 class="card-title">Ventilateur tour</h5>
-                  <p class="card-text">catégorie :ventilateur tour</p>
+                  <h5 class="card-title">Ventil'9000</h5>
+                  <div hidden id="refNumber13">150.963</div>
+                  <p class="card-text" id="priceVsp4">75.90€</p>
                 </div>
               </div>
-              <div class="card" id="vp8">
-                <img class="card-img-top" src="assets/img/ventilo-pied8.jpg" alt="ventilateur pied">
+              <div class="card" id="vsp5">
+                <img class="card-img-top" src="assets/img/vent-sans-pales5.jpg" alt="ventilateur sans pales">
                 <div class="card-body">
-                  <h5 class="card-title">Ventilateur</h5>
-                  <p class="card-text">catégorie :ventilateur tour</p>
+                  <h5 class="card-title">Ventil'7000</h5>
+                  <div hidden id="refNumber14">150.964</div>
+                  <p class="card-text" id="priceVsp5">39.99€</p>
                 </div>
               </div>
-              <div class="card" id="vp9">
-                <img class="card-img-top" src="assets/img/ventilo-pied9.jpg" alt="ventilateur pied">
+              <div class="card" id="vsp6">
+                <img class="card-img-top" src="assets/img/vent-sans-pales6.jpg" alt="ventilateur sans pales">
                 <div class="card-body">
-                  <h5 class="card-title">Ventilateur</h5>
-                  <p class="card-text">catégorie :ventilateur tour</p>
+                  <h5 class="card-title">Ventil'green</h5>
+                  <div hidden id="refNumber15">150.965</div>
+                  <p class="card-text" id="priceVsp6">35.99€</p>
                 </div>
               </div>
-        </div>
+              <div class="card-deck">
+                <div class="card" id="vsp7">
+                  <img class="card-img-top" src="assets/img/vent-sans-pales7.jpg" alt="ventilateur sans pales">
+                  <div class="card-body">
+                    <h5 class="card-title">Ventil'blue</h5>
+                    <div hidden id="refNumber16">150.966</div>
+                    <p class="card-text" id="priceVsp7">35.99€</p>
+                  </div>
+                </div>
+                <div class="card" id="vsp8">
+                  <img class="card-img-top" src="assets/img/vent-sans-pales8.jpeg" alt="ventilateur sans pales">
+                  <div class="card-body">
+                    <h5 class="card-title">Ventilateur1500</h5>
+                    <div hidden id="refNumber17">150.967</div>
+                    <p class="card-text" id="priceVsp8">159.99€</p>
+                  </div>
+                </div>
+                <div class="card" id="vsp9">
+                  <img class="card-img-top" src="assets/img/vent-sans-pales9.jpg" alt="ventilateur sans pales">
+                  <div class="card-body">
+                    <h5 class="card-title">Ventilateur1550</h5>
+                    <div hidden id="refNumber18">150.968</div>
+                    <p class="card-text" id="priceVsp9">199.99€</p>
+                  </div>
+                </div>
+              </div>
+              <!-- 3ème catégorie de ventilateur-->
+              <div class="container">
+                <div class="card-deck">
+                  <div class="card" id="vp1">
+                    <img class="card-img-top" src="assets/img/ventilo-pied1.jpg" alt="ventilateur pied">
+                    <div class="card-body">
+                      <h5 class="card-title">Ventil900</h5>
+                      <div hidden id="refNumber19">150.969</div>
+                      <p class="card-text" id="priceVp1">19.99€</p>
+                    </div>
+                  </div>
+                  <div class="card" id="vp2">
+                    <img class="card-img-top" src="assets/img/ventilo-pied2.jpg" alt="ventilateur pied">
+                    <div class="card-body">
+                      <h5 class="card-title">Ventil400</h5>
+                      <div hidden id="refNumber20">150.063</div>
+                      <p class="card-text" id="priceVp2">19.90€</p>
+                    </div>
+                  </div>
+                  <div class="card" id="vp3">
+                    <img class="card-img-top" src="assets/img/ventilo-pied3.jpg" alt="ventilateur pieds">
+                    <div class="card-body">
+                      <h5 class="card-title">Ventil'2000</h5>
+                      <div hidden id="refNumber21">150.163</div>
+                      <p class="card-text" id="priceVp3">159.90€</p>
+                    </div>
+                  </div>
+                  <div class="card-deck">
+                    <div class="card" id="vp4">
+                      <img class="card-img-top" src="assets/img/ventilo-pied4.jpg" alt="ventilateur pieds">
+                      <div class="card-body">
+                        <h5 class="card-title">Ventil'black</h5>
+                        <div hidden id="refNumber22">150.263</div>
+                        <p class="card-text" id="priceVp4">169.90€</p>
+                      </div>
+                    </div>
+                    <div class="card" id="vp5">
+                      <img class="card-img-top" src="assets/img/ventilo-pied5.jpg" alt="ventilateur pieds">
+                      <div class="card-body">
+                        <h5 class="card-title">Ventil'purple</h5>
+                        <div hidden id="refNumber23">150.363</div>
+                        <p class="card-text" id="priceVp5">79.90€</p>
+                      </div>
+                    </div>
+                    <div class="card" id="vp6">
+                      <img class="card-img-top" src="assets/img/ventilo-pied6.jpg" alt="ventilateur pied">
+                      <div class="card-body">
+                        <h5 class="card-title">Ventilateur rétro</h5>
+                        <div hidden id="refNumber24">150.463</div>
+                        <p class="card-text" id="priceVp6">82.90€</p>
+                      </div>
+                    </div>
+                    <div class="card-deck">
+                      <div class="card" id="vp7">
+                        <img class="card-img-top" src="assets/img/ventilo-pied7.jpg" alt="ventilateur pied">
+                        <div class="card-body">
+                          <h5 class="card-title">Ventil'blue</h5>
+                          <div hidden id="refNumber25">150.563</div>
+                          <p class="card-text" id="priceVp7">19.90€</p>
+                        </div>
+                      </div>
+                      <div class="card" id="vp8">
+                        <img class="card-img-top" src="assets/img/ventilo-pied8.jpg" alt="ventilateur pied">
+                        <div class="card-body">
+                          <h5 class="card-title">Ventilateur fleur</h5>
+                          <div hidden id="refNumber26">150.663</div>
+                          <p class="card-text" id="priceVp8">35.90€</p>
+                        </div>
+                      </div>
+                      <div class="card" id="vp9">
+                        <img class="card-img-top" src="assets/img/ventilo-pied9.jpg" alt="ventilateur pied">
+                        <div class="card-body">
+                          <h5 class="card-title">Ventilateur classique</h5>
+                          <div hidden id="refNumber27">150.763</div>
+                          <p class="card-text" id="priceVp9">75.90€</p>
+                        </div>
+                      </div>
+                    </div>
       </div>
     <!--Fin wrapper-all -->
   <script type="assets/js/script-3.3.1.js"></script>
