modification du chemin jquery

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     </div>
   </div>
   <!--Fin wrapper-all -->
-  <script type="assets/js/script-3.3.1.js"></script>
+  <script type="assets/js/jquery-3.3.1.js"></script>
   <script type="assets/js/script.js"></script>
 </body>
 </html>
