--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <title>Projet Commun</title>
+  <script src="assets/js/jquery-3.3.1.js"></script>
+  <script src="assets/js/bootstrap.js"></script>
+  <script src="assets/js/script.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/style.css" />
@@ -11,6 +14,26 @@
 <body>
   <!--Debut wrapper-all -->
   <div id="wrapper-all">
+
+    <button type="button" class="btn btn-info btn-md" id="myBtn">Votre panier</button>
+    <div class="modal fade" id="myModal" role="dialog">
+      <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Modal with Dark Overlay</h4>
+          </div>
+          <div class="modal-body">
+            <p>This modal has a dark overlay.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!--Debut sidebar-wrappper -->
     <div id="sidebar-wrapper">
       <ul class="sidebar-nav">
@@ -270,7 +293,5 @@
     </div>
   </div>
   <!--Fin wrapper-all -->
-  <script src="assets/js/jquery-3.3.1.js"></script>
-  <script src="assets/js/script.js"></script>
 </body>
 </html>
