--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <link rel="stylesheet" href="assets/css/bootstrap/bootstrap.min.css" />
   <link rel="stylesheet" href="assets/css/style.css" />
+  <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative" rel="stylesheet">
 </head>
 <body>
+  <div class="navi-top">
+    <span id="venti-logo">VENTILO</span>
+  </div>
   <!--Debut wrapper-all -->
   <div id="wrapper-all">
     <!--Debut sidebar-wrappper -->
@@ -34,6 +38,7 @@
             <h5 class="card-title">Venti-2018</h5>
             <div hidden id="refNumber1">150.963</div>
             <p class="card-text" id="priceVt1">49.99€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
         <div class="card bg-dark text-white" id="vt2">
@@ -42,6 +47,7 @@
             <h5 class="card-title">Ventil</h5>
             <div hidden id="refNumber2">151.963</div>
             <p class="card-text" id="priceVt2">25.99€</p>
+           <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
         <div class="card bg-dark text-white" id="vt3">
@@ -50,6 +56,7 @@
             <h5 class="card-title">Venti-95</h5>
             <div hidden id="refNumber3">152.963</div>
             <p class="card-text" id="priceVt3">19.99€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
       </div>
@@ -60,6 +67,7 @@
             <h5 class="card-title">Vent block</h5>
             <div hidden id="refNumber4">153.963</div>
             <p class="card-text" id="priceVt4">159.80€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
         <div class="card bg-dark text-white" id="vt5">
@@ -68,6 +76,7 @@
             <h5 class="card-title">Vent block noir</h5>
             <div hidden id="refNumber5">155.963</div>
             <p class="card-text" id="priceVt5">169.80€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
         <div class="card bg-dark text-white" id="vt6">
@@ -76,6 +85,7 @@
             <h5 class="card-title">Ventil1000</h5>
             <div hidden id="refNumber6">156.963</div>
             <p class="card-text" id="priceVt6">125.50€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
       </div>
@@ -86,6 +96,7 @@
             <h5 class="card-title">Venti'tour</h5>
             <div hidden id="refNumber7">157.963</div>
             <p class="card-text" id="priceVt7">165€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
         <div class="card bg-dark text-white" id="vt8">
@@ -94,6 +105,7 @@
             <h5 class="card-title">Ventilateur</h5>
             <div hidden id="refNumber8">158.963</div>
             <p class="card-text" id="priceVt8">35€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
         <div class="card bg-dark text-white" id="vt9">
@@ -102,6 +114,7 @@
             <h5 class="card-title">Ventil'19</h5>
             <div hidden id="refNumber9">159.963</div>
             <p class="card-text" id="priceVt9">26.90€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
       </div>
@@ -115,6 +128,7 @@
             <h5 class="card-title">Ventil'1500</h5>
             <div hidden id="refNumber10">150.960</div>
             <p class="card-text" id="priceVsp1">159.90€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
         <div class="card bg-dark text-white" id="vsp2">
@@ -123,6 +137,7 @@
             <h5 class="card-title">Ventil'grey</h5>
             <div hidden id="refNumber11">150.961</div>
             <p class="card-text" id="priceVsp2">35.99€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
         <div class="card bg-dark text-white" id="vsp3">
@@ -131,6 +146,7 @@
             <h5 class="card-title">Ventil'gold</h5>
             <div hidden id="refNumber12">150.962</div>
             <p class="card-text" id="priceVsp3">35.99€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
       </div>
@@ -141,6 +157,7 @@
             <h5 class="card-title">Ventil'9000</h5>
             <div hidden id="refNumber13">150.963</div>
             <p class="card-text" id="priceVsp4">75.90€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
         <div class="card bg-dark text-white" id="vsp5">
@@ -149,6 +166,7 @@
             <h5 class="card-title">Ventil'7000</h5>
             <div hidden id="refNumber14">150.964</div>
             <p class="card-text" id="priceVsp5">39.99€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
         <div class="card bg-dark text-white" id="vsp6">
@@ -157,6 +175,7 @@
             <h5 class="card-title">Ventil'green</h5>
             <div hidden id="refNumber15">150.965</div>
             <p class="card-text" id="priceVsp6">35.99€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
       </div>
@@ -167,6 +186,7 @@
             <h5 class="card-title">Ventil'blue</h5>
             <div hidden id="refNumber16">150.966</div>
             <p class="card-text" id="priceVsp7">35.99€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
         <div class="card bg-dark text-white" id="vsp8">
@@ -175,6 +195,7 @@
             <h5 class="card-title">Ventilateur1500</h5>
             <div hidden id="refNumber17">150.967</div>
             <p class="card-text" id="priceVsp8">159.99€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
         <div class="card bg-dark text-white" id="vsp9">
@@ -183,6 +204,7 @@
             <h5 class="card-title">Ventilateur1550</h5>
             <div hidden id="refNumber18">150.968</div>
             <p class="card-text" id="priceVsp9">199.99€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
       </div>
@@ -196,6 +218,7 @@
             <h5 class="card-title">Ventil900</h5>
             <div hidden id="refNumber19">150.969</div>
             <p class="card-text" id="priceVp1">19.99€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
         <div class="card bg-dark text-white" id="vp2">
@@ -204,6 +227,7 @@
             <h5 class="card-title">Ventil400</h5>
             <div hidden id="refNumber20">150.063</div>
             <p class="card-text" id="priceVp2">19.90€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
         <div class="card bg-dark text-white" id="vp3">
@@ -212,6 +236,7 @@
             <h5 class="card-title">Ventil'2000</h5>
             <div hidden id="refNumber21">150.163</div>
             <p class="card-text" id="priceVp3">159.90€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
       </div>
@@ -222,6 +247,7 @@
             <h5 class="card-title">Ventil'black</h5>
             <div hidden id="refNumber22">150.263</div>
             <p class="card-text" id="priceVp4">169.90€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
         <div class="card bg-dark text-white" id="vp5">
@@ -230,6 +256,7 @@
             <h5 class="card-title">Ventil'purple</h5>
             <div hidden id="refNumber23">150.363</div>
             <p class="card-text" id="priceVp5">79.90€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
         <div class="card bg-dark text-white" id="vp6">
@@ -238,6 +265,7 @@
             <h5 class="card-title">Ventilateur rétro</h5>
             <div hidden id="refNumber24">150.463</div>
             <p class="card-text" id="priceVp6">82.90€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
       </div>
@@ -248,6 +276,7 @@
             <h5 class="card-title">Ventil'blue</h5>
             <div hidden id="refNumber25">150.563</div>
             <p class="card-text" id="priceVp7">19.90€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
         <div class="card bg-dark text-white" id="vp8">
@@ -256,6 +285,7 @@
             <h5 class="card-title">Ventilateur fleur</h5>
             <div hidden id="refNumber26">150.663</div>
             <p class="card-text" id="priceVp8">35.90€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
         <div class="card bg-dark text-white" id="vp9">
@@ -264,6 +294,7 @@
             <h5 class="card-title">Ventilateur classique</h5>
             <div hidden id="refNumber27">150.763</div>
             <p class="card-text" id="priceVp9">75.90€</p>
+            <button type="button" name="button" class="shopping btn btn-light">Ajoutez-moi à votre panier</button>
           </div>
         </div>
       </div>
