modif sidebar et ajou titre categorie

--- a/index.html
+++ b/index.html
@@ -38,18 +38,19 @@
     <div id="sidebar-wrapper">
       <ul class="sidebar-nav">
         <div id="sidebar-nav-div-title"><li><a class="sidebar-title" href="#">Catégorie</a></li></div>
-        <div id="sidebar-nav-div-input"><li>
-          <input id="sidebar-nav-input" type="text" name="search" value="" />
+        <!--<div id="sidebar-nav-div-search"><li>
+          <input id="sidebar-nav-search" type="search" name="q" value="" placeholder="Rechercher sur le site…" />
           <button id="sidebar-nav-button" type="submit"><i id="icon-search" class="fa fa-search"></i></button>
-        </li></div>
-        <div id="sidebar-nav-div"><li><a class="sidebar-nav-link" href="#">Ventilateur sur pied</a></li></div>
-        <div id="sidebar-nav-div"><li><a class="sidebar-nav-link" href="#">Ventilateur colonne</a></li></div>
-        <div id="sidebar-nav-div"><li><a class="sidebar-nav-link" href="#">Ventilateur sans pales</a></li></div>
+        </li></div>-->
+        <div id="sidebar-nav-div"><li><a class="sidebar-nav-link" href="#cardTowerTitle">Ventilateur colonne</a></li></div>
+        <div id="sidebar-nav-div"><li><a class="sidebar-nav-link" href="#cardBladeTitle">Ventilateur sans pales</a></li></div>
+        <div id="sidebar-nav-div"><li><a class="sidebar-nav-link" href="#cardFanTitle">Ventilateur sur pied</a></li></div>
       </ul>
     </div>
     <!-- Fin sidebar-wrapper -->
     <!-- 1ère catégorie de ventilateur-->
     <div class="container" id="cardTower">
+      <div class="cardTower-title" id="cardTowerTitle">Ventilateur colonne</div>
       <div class="card-columns">
         <div class="card bg-dark text-white" id="vt1">
           <img class="card-img-top" src="assets/img/ventour1.jpg" alt="ventilateur tour">
@@ -131,6 +132,7 @@
     </div>
     <!-- 2ème catégorie de ventilateur-->
     <div class="container" id="cardBlade">
+      <div class="cardBlade-title" id="cardBladeTitle">Ventilateur sans pales</div>
       <div class="card-columns">
         <div class="card bg-dark text-white" id="vsp1">
           <img class="card-img-top" src="assets/img/vent-sans-pales1.jpeg" alt="ventilateur sans pales">
@@ -212,6 +214,7 @@
     </div>
     <!-- 3ème catégorie de ventilateur-->
     <div class="container" id="cardFan">
+      <div class="cardFan-title" id="cardFanTitle">Ventilateur sur pied</div>
       <div class="card-columns">
         <div class="card bg-dark text-white" id="vp1">
           <img class="card-img-top" src="assets/img/ventilo-pied1.jpg" alt="ventilateur sur pied">
