affichage des categorie et animation

--- a/index.html
+++ b/index.html
@@ -42,13 +42,9 @@
     <div id="sidebar-wrapper">
       <ul class="sidebar-nav">
         <div id="sidebar-nav-div-title"><li><a class="sidebar-title" href="#">Catégorie</a></li></div>
-        <!--<div id="sidebar-nav-div-search"><li>
-          <input id="sidebar-nav-search" type="search" name="q" value="" placeholder="Rechercher sur le site…" />
-          <button id="sidebar-nav-button" type="submit"><i id="icon-search" class="fa fa-search"></i></button>
-        </li></div>-->
-        <div id="sidebar-nav-div"><li><a class="sidebar-nav-link" href="#cardTowerTitle">Ventilateur colonne</a></li></div>
-        <div id="sidebar-nav-div"><li><a class="sidebar-nav-link" href="#cardBladeTitle">Ventilateur sans pales</a></li></div>
-        <div id="sidebar-nav-div"><li><a class="sidebar-nav-link" href="#cardFanTitle">Ventilateur sur pied</a></li></div>
+        <div id="sidebar-nav-div"><li><a id="cardTower-show-hide" class="sidebar-nav-link">Ventilateur colonne</a></li></div>
+        <div id="sidebar-nav-div"><li><a id="cardBlade-show-hide" class="sidebar-nav-link">Ventilateur sans pales</a></li></div>
+        <div id="sidebar-nav-div"><li><a id="cardFan-show-hide" class="sidebar-nav-link">Ventilateur sur pied</a></li></div>
       </ul>
     </div>
     <!-- Fin sidebar-wrapper -->
